@@ -13,8 +13,8 @@
   <Anty.corePart.parts.2.parts.0.parts.5.customLabel>Right lung</Anty.corePart.parts.2.parts.0.parts.5.customLabel>
   <Anty.corePart.parts.2.parts.0.parts.6.customLabel>Left kidney</Anty.corePart.parts.2.parts.0.parts.6.customLabel>
   <Anty.corePart.parts.2.parts.0.parts.7.customLabel>Right kidney</Anty.corePart.parts.2.parts.0.parts.7.customLabel>
-  <Anty.corePart.parts.3.customLabel>Left Exoarm</Anty.corePart.parts.3.customLabel><!-- Change -->
-  <Anty.corePart.parts.3.parts.0.customLabel>Left shoulder</Anty.corePart.parts.3.parts.0.customLabel><!-- Change -->
+  <Anty.corePart.parts.3.customLabel>Left Exoarm</Anty.corePart.parts.3.customLabel>
+  <Anty.corePart.parts.3.parts.0.customLabel>Left shoulder</Anty.corePart.parts.3.parts.0.customLabel>
   <Anty.corePart.parts.3.parts.0.parts.0.customLabel>Left arm</Anty.corePart.parts.3.parts.0.parts.0.customLabel>
   <Anty.corePart.parts.3.parts.0.parts.0.parts.0.customLabel>Left humerus</Anty.corePart.parts.3.parts.0.parts.0.parts.0.customLabel>
   <Anty.corePart.parts.3.parts.0.parts.0.parts.1.customLabel>Left radius</Anty.corePart.parts.3.parts.0.parts.0.parts.1.customLabel>
@@ -24,8 +24,8 @@
   <Anty.corePart.parts.3.parts.0.parts.0.parts.2.parts.2.customLabel>Left middle finger</Anty.corePart.parts.3.parts.0.parts.0.parts.2.parts.2.customLabel>
   <Anty.corePart.parts.3.parts.0.parts.0.parts.2.parts.3.customLabel>Left index finger</Anty.corePart.parts.3.parts.0.parts.0.parts.2.parts.3.customLabel>
   <Anty.corePart.parts.3.parts.0.parts.0.parts.2.parts.4.customLabel>Left thumb</Anty.corePart.parts.3.parts.0.parts.0.parts.2.parts.4.customLabel>
-  <Anty.corePart.parts.4.customLabel>Right Exoarm</Anty.corePart.parts.4.customLabel><!-- Change -->
-  <Anty.corePart.parts.4.parts.0.customLabel>Right shoulder</Anty.corePart.parts.4.parts.0.customLabel><!-- Change -->
+  <Anty.corePart.parts.4.customLabel>Right Exoarm</Anty.corePart.parts.4.customLabel>
+  <Anty.corePart.parts.4.parts.0.customLabel>Right shoulder</Anty.corePart.parts.4.parts.0.customLabel>
   <Anty.corePart.parts.4.parts.0.parts.0.customLabel>Right arm</Anty.corePart.parts.4.parts.0.parts.0.customLabel>
   <Anty.corePart.parts.4.parts.0.parts.0.parts.0.customLabel>Right humerus</Anty.corePart.parts.4.parts.0.parts.0.parts.0.customLabel>
   <Anty.corePart.parts.4.parts.0.parts.0.parts.1.customLabel>Right radius</Anty.corePart.parts.4.parts.0.parts.0.parts.1.customLabel>
