@@ -151,4 +151,9 @@
 
   <AT_Shield.label>물리력 차단 보호막</AT_Shield.label>
   <AT_Shield.description>모든 피해를 흡수합니다.</AT_Shield.description>
+
+  <AT_ReinforcedJaw.label>앤티 강화 턱</AT_ReinforcedJaw.label>
+  <AT_ReinforcedJaw.labelNoun>앤티 강화 턱</AT_ReinforcedJaw.labelNoun>
+  <AT_ReinforcedJaw.description>앤티 강화 턱.</AT_ReinforcedJaw.description>
+  <AT_ReinforcedJaw.comps.HediffComp_VerbGiver.tools.0.label>큰 턱</AT_ReinforcedJaw.comps.HediffComp_VerbGiver.tools.0.label>
 </LanguageData>
